--- a/TowerDefense.csproj
+++ b/TowerDefense.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Scripts\DestroyCreeps.cs" />
     <Compile Include="Assets\Scripts\DestroyOnWall.cs" />
     <Compile Include="Assets\Scripts\EnemyDmg.cs" />
+    <Compile Include="Assets\Scripts\HPCS.cs" />
     <Compile Include="Assets\Scripts\Health_BarCS.cs" />
     <Compile Include="Assets\Scripts\MakeCreeps.cs" />
     <Compile Include="Assets\Scripts\Play.cs" />
